--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
+	<dependency>
+	    <groupId>org.junit.platform</groupId>
+	    <artifactId>junit-platform-suite</artifactId>
+	    <version>1.8.2</version>
+	    <scope>test</scope>
+	</dependency>
     </dependencies>
 
     <build>
